[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UserInterface/StoryUI.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterface/MailUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/ambulance_ui.tres" type="Theme" id=4]

[node name="StoryUI" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1362.0
margin_bottom = 764.0

[node name="PADDING" type="Control" parent="VBoxContainer"]
margin_right = 1358.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 1358.0
margin_bottom = 156.0
focus_mode = 0
enabled_focus_mode = 0
text = "START DAY X"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 1358.0
margin_bottom = 200.0

[node name="news it" type="Control" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0

[node name="PostContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/news it"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_right = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="my mail" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/my mail"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TabContainer/my mail/HBoxContainer"]
margin_left = 75.0
margin_right = 275.0
margin_bottom = 202.0
rect_min_size = Vector2( 200, 40 )
color = Color( 1, 1, 1, 0.0392157 )

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/TabContainer/my mail/HBoxContainer"]
margin_left = 279.0
margin_right = 479.0
margin_bottom = 202.0
rect_min_size = Vector2( 200, 40 )
color = Color( 1, 1, 1, 0.0392157 )

[node name="MailUI" parent="VBoxContainer/TabContainer/my mail/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 483.0
margin_right = 1283.0
margin_bottom = 202.0
rect_min_size = Vector2( 800, 0 )
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="tab_changed" from="VBoxContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
